# ipclib

./: CMakeLists.txt  LICENSE  README.md  envsetup.sh
example/: CMakeLists.txt  example_client.cc  example_server.cc
example/inc/: example.h  example_factory.h  example_proxy.h  example_stub.h  iexample.h  protocol.h
example/src/: example.cc  example_factory.cc  example_proxy.cc  example_stub.cc
inc/: client.h  core.h  dbus_helper.h  func_traits.h  log.h  server.h
inc/dbus/: client.h  core.h  dbus_helper.h  server.h
src/: client.cc  core.cc  dbus_helper.cc  server.cc
src/dbus/: client.cc  core.cc  dbus_helper.cc  server.cc
test/: CMakeLists.txt  main_client.cc  main_server.cc
test/lib/inc/: i_myservice.h  imyservice.h  myservice.h  myservice_factory.h  myservice_proxy.h  myservice_stub.h  protocol.h
test/lib/src/: myservice.cc  myservice_factory.cc  myservice_proxy.cc  myservice_stub.cc
